--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,11 @@
-<header class="header">
-  <div class="header__container">
-    <div class="header__title">
-      Литвинский коминар
-    </div>
-    <div class="header__phone-number">
-      +375296180164
-    </div>
-    <div class="header__whatsapp">
-      <a href="https://api.whatsapp.com/send?phone=375296566401">Написать в WhatsApp</a>
-    </div>
-  </div>
-</header>
+<app-header></app-header>
 <div>
+  <nav class="navigation">
+    <a class="links" routerLink="/" routerLinkActive="active">Главная</a>
+    <a class="links" routerLink="/service" routerLinkActive="active">Услуги</a>
+    <a class="links" routerLink="/about-us" routerLinkActive="active">О нас</a>
+  </nav>
   <router-outlet></router-outlet>
 </div>
-<footer class="footer">
-  <button mat-button>VK</button>
-  <button mat-button>Telegram</button>
-  <button mat-button>Instagram</button>
-</footer>
+
+<app-footer></app-footer>
