--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="header__container">
     <div class="header__title" routerLink="/">
-      Литвинский коминар
+      Чистим911
     </div>
     <div class="header__phone-number">
       +375296180164
