--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -4,29 +4,8 @@
       Мы осуществляем следующие работы
     </div>
     <div class="our-services__container">
-      <div class="our-services__service">
-        Lorem ipsum dolor sit amet.
-      </div>
-      <div class="our-services__service">
-        Lorem ipsum dolor sit amet.
-      </div>
-      <div class="our-services__service">
-        Lorem ipsum dolor sit amet.
-      </div>
-      <div class="our-services__service">
-        Lorem ipsum dolor sit amet.
-      </div>
-      <div class="our-services__service">
-        Lorem ipsum dolor sit amet.
-      </div>
-      <div class="our-services__service">
-        Lorem ipsum dolor sit amet.
-      </div>
-      <div class="our-services__service">
-        Lorem ipsum dolor sit amet.
-      </div>
-      <div class="our-services__service">
-        Lorem ipsum dolor sit amet.
+      <div *ngFor="let ourJob of ourJobs" class="our-services__service">
+        {{ourJob}}
       </div>
     </div>
   </div>
@@ -36,10 +15,29 @@
       Наши преимущества
     </div>
     <div class="advantages__list">
-      <div class="advantage">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
-      <div class="advantage">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
-      <div class="advantage">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
-      <div class="advantage">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+      <div class="advantage quality">
+        <div class="quality__image"></div>
+        <div class="quality__container">
+          <div class="advantage__title">
+            Качество и гарантии
+          </div>
+          <div class="advantage__body">
+            Мы не навязываем своих услуг, если в них нет нужды. Но если вы обратились к нам за очисткой дымовых и
+            вентиляционных систем, будьте уверены - свою работу выполним качественно и предоставим на нее гарантии.
+          </div>
+        </div>
+      </div>
+      <div class="advantage security">
+        <div class="security__image"></div>
+        <div class="security__container">
+          <div class="advantage__title ">
+            Безопасность
+          </div>
+          <div class="advantage__description">
+            Ваша безопасность и спокойствие – наша ответственность.
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -55,7 +53,7 @@
     </div>
   </div>
 
-  <div class="form" [formGroup]="emailForm">
+  <!--<div class="form" [formGroup]="emailForm">
     <mat-form-field class="form__field">
       <input matInput placeholder="Ваше имя" formControlName="name">
     </mat-form-field>
@@ -65,5 +63,5 @@
     <mat-form-field class="form__field">
       <textarea matInput placeholder="Сообщение" formControlName="message"></textarea>
     </mat-form-field>
-  </div>
+  </div>-->
 </div>
