--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -1,1 +1,11 @@
-<p>about-us works!</p>
+<div class="about-us">
+  <div class="about-us__container">
+    <div id="yandex-map" class="yandex-map">
+
+    </div>
+    <div class="about-us__info">
+      qweqweqwe
+    </div>
+  </div>
+</div>
+
