add carousel, contact info, list

--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -4,7 +4,21 @@
 
     </div>
     <div class="about-us__info">
-      qweqweqwe
+      <div class="name">
+        Константин Андреевич Хадкевич
+      </div>
+      <div class="phone">
+        Телефон: <a class="phone__link" href="tel: +375296180164">+375296180164</a>
+      </div>
+      <div class="email">
+        Email: <a href="mailto:stasikostrich98@gmail.com">stasikostrich98@gmail.com</a>
+      </div>
+      <div class="IP">
+        ИП: Хадкевич К. А.
+      </div>
+      <div class="UNP">
+        УНП: 45745747
+      </div>
     </div>
   </div>
 </div>
