--- a/src/app/components/footer/footer.component.less
+++ b/src/app/components/footer/footer.component.less
@@ -1,6 +1,8 @@
 .footer {
+  position: absolute;
+  left: 0;
   bottom: 0;
   width: 100%;
-  display: flex;
-  justify-content: center;
+  height: 80px;
+  background-color: #656366;
 }
