--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,12 @@
-<app-header></app-header>
-<div>
-  <nav class="navigation">
-    <a class="links" routerLink="/" routerLinkActive="active">Главная</a>
-    <a class="links" routerLink="/service" routerLinkActive="active">Услуги</a>
-    <a class="links" routerLink="/about-us" routerLinkActive="active">О нас</a>
-  </nav>
-  <router-outlet></router-outlet>
+<div class="wrapper">
+  <app-header></app-header>
+  <div class="content">
+    <nav class="navigation">
+      <a class="links" routerLink="/" routerLinkActive="active">Главная</a>
+      <a class="links" routerLink="/service" routerLinkActive="active">Услуги</a>
+      <a class="links" routerLink="/about-us" routerLinkActive="active">О нас</a>
+    </nav>
+    <router-outlet></router-outlet>
+  </div>
+  <app-footer></app-footer>
 </div>
-
-<app-footer></app-footer>
