--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,13 +1,24 @@
-.navigation {
-  background: linear-gradient(to right, rgba(249, 116, 93, 1) 0%, rgba(249, 116, 93, 1) 6%, rgba(248, 91, 68, 1) 26%, rgba(248, 76, 53, 1) 38%, rgba(243, 84, 63, 1) 46%, rgba(245, 152, 138, 1) 80%);
-  display: flex;
-  margin: 0 auto;
-  padding: 24px 0;
-  justify-content: center;
+.wrapper {
+  position: relative;
+  min-height: 100%;
+
+  .content {
+    padding-bottom: 80px;
+
+    .navigation {
+      background: linear-gradient(to right, rgba(249, 116, 93, 1) 0%, rgba(249, 116, 93, 1) 6%, rgba(248, 91, 68, 1) 26%, rgba(248, 76, 53, 1) 38%, rgba(243, 84, 63, 1) 46%, rgba(245, 152, 138, 1) 80%);
+      display: flex;
+      margin: 0 auto;
+      padding: 24px 0;
+      justify-content: center;
+    }
+
+    .links {
+      padding: 0 20px;
+      font-size: 24px;
+    }
+  }
 }
 
-.links {
-  padding: 0 20px;
-  font-size: 24px;
-}
+
 
