--- a/src/app/components/page-not-found/page-not-found.component.html
+++ b/src/app/components/page-not-found/page-not-found.component.html
@@ -1,1 +1,16 @@
-<p>page-not-found works!</p>
+<div class="error-404">
+  <h1>
+    Извините, но по вашему запросу ничего не найдено
+  </h1>
+  <div class="fire">
+    <div class="flames">
+      <div class="flame"></div>
+      <div class="flame"></div>
+      <div class="flame"></div>
+      <div class="flame"></div>
+    </div>
+    <div class="logs"></div>
+  </div>
+
+</div>
+
