change header, add social icons, error-404

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,7 @@
 <footer class="footer">
-  <button mat-button>VK</button>
-  <button mat-button>Telegram</button>
-  <button mat-button>Instagram</button>
+  <div class="social-links">
+    <div class="social-links__facebook"></div>
+    <div class="social-links__instagram"></div>
+    <div class="social-links__youtube"></div>
+  </div>
 </footer>
