--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -1,45 +1,49 @@
 <div class="main">
   <div class="main__our-services our-services">
-    <div class="our-services__title">
-      <h2>Мы осуществляем следующие работы</h2>
-    </div>
     <div class="our-services__container">
-      <ol class="rounded">
-        <li  class="rounded__list"><a class="rounded__link">Чистка печей, каминов, тандыров</a></li>
-        <li  class="rounded__list"><a class="rounded__link">Чистка печей, каминов, тандыров</a></li>
-        <li  class="rounded__list"><a class="rounded__link">Чистка печей, каминов, тандыров</a></li>
-        <li  class="rounded__list"><a class="rounded__link">Чистка печей, каминов, тандыров</a></li>
-        <li  class="rounded__list"><a class="rounded__link">Чистка печей, каминов, тандыров</a></li>
-        <li  class="rounded__list"><a class="rounded__link">Чистка печей, каминов, тандыров</a></li>
-      </ol>
+      <div class="our-services__title">
+        <h2>Мы осуществляем следующие работы</h2>
+      </div>
+      <div class="our-services__items">
+        <ol class="rounded">
+          <li class="rounded__list"><a class="rounded__link">Чистка печей, каминов, тандыров</a></li>
+          <li class="rounded__list"><a class="rounded__link">Чистка печей, каминов, тандыров</a></li>
+          <li class="rounded__list"><a class="rounded__link">Чистка печей, каминов, тандыров</a></li>
+          <li class="rounded__list"><a class="rounded__link">Чистка печей, каминов, тандыров</a></li>
+          <li class="rounded__list"><a class="rounded__link">Чистка печей, каминов, тандыров</a></li>
+          <li class="rounded__list"><a class="rounded__link">Чистка печей, каминов, тандыров</a></li>
+        </ol>
+      </div>
     </div>
   </div>
 
   <div class="main__advantages advantages">
-    <div class="advantages__title">
-      <h2>Наши преимущества</h2>
-    </div>
-    <div class="advantages__list">
-      <div class="advantage quality">
-        <div class="quality__image"></div>
-        <div class="quality__container">
-          <div class="advantage__title">
-            Качество и гарантии
-          </div>
-          <div class="advantage__body">
-            Мы не навязываем своих услуг, если в них нет нужды. Но если вы обратились к нам за очисткой дымовых и
-            вентиляционных систем, будьте уверены - свою работу выполним качественно и предоставим на нее гарантии.
+    <div class="advantages__container">
+      <div class="advantages__title">
+        <h2>Наши преимущества</h2>
+      </div>
+      <div class="advantages__list">
+        <div class="advantage quality">
+          <div class="quality__image"></div>
+          <div class="quality__container">
+            <div class="advantage__title">
+              Качество и гарантии
+            </div>
+            <div class="advantage__body">
+              Мы не навязываем своих услуг, если в них нет нужды. Но если вы обратились к нам за очисткой дымовых и
+              вентиляционных систем, будьте уверены - свою работу выполним качественно и предоставим на нее гарантии.
+            </div>
           </div>
         </div>
-      </div>
-      <div class="advantage security">
-        <div class="security__image"></div>
-        <div class="security__container">
-          <div class="advantage__title ">
-            Безопасность
-          </div>
-          <div class="advantage__description">
-            Ваша безопасность и спокойствие – наша ответственность.
+        <div class="advantage security">
+          <div class="security__image"></div>
+          <div class="security__container">
+            <div class="advantage__title ">
+              Безопасность
+            </div>
+            <div class="advantage__description">
+              Ваша безопасность и спокойствие – наша ответственность.
+            </div>
           </div>
         </div>
       </div>
@@ -47,17 +51,9 @@
   </div>
 
   <div class="main__feedback feedback">
-    <!--<div class="feedback__title">
-      <h2>Наши отзывы</h2>
-    </div>
-    <div class="feedback__body">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, adipisci cupiditate delectus dignissimos
-      eaque error facilis impedit incidunt maiores nam possimus quaerat quas qui saepe sequi. Ab asperiores beatae culpa
-      fuga inventore laudantium libero magnam numquam, officia omnis porro quaerat reiciendis suscipit, ullam vel vitae
-      voluptates! Doloribus ea in quod?
-    </div>-->
-    <ngb-carousel *ngIf="images" style="width: 100%;">
-      <ng-template ngbSlide *ngFor="let image of images">
+    <div class="feedback__container">
+      <ngb-carousel *ngIf="images" style="width: 100%;">
+        <ng-template ngbSlide *ngFor="let image of images">
           <div class="picsum-img-wrapper" style="width: 100%;">
             <img [src]="image" alt="Random first slide" style="width: 100%;">
           </div>
@@ -65,19 +61,20 @@
             <h3>First slide label</h3>
             <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
           </div>
-      </ng-template>
-    </ngb-carousel>
+        </ng-template>
+      </ngb-carousel>
+    </div>
   </div>
 
-  <!--<div class="form" [formGroup]="emailForm">
-    <mat-form-field class="form__field">
-      <input matInput placeholder="Ваше имя" formControlName="name">
-    </mat-form-field>
-    <mat-form-field class="form__field">
-      <input matInput placeholder="Email" formControlName="email">
-    </mat-form-field>
-    <mat-form-field class="form__field">
-      <textarea matInput placeholder="Сообщение" formControlName="message"></textarea>
-    </mat-form-field>
-  </div>-->
+  <!-- <div class="form" [formGroup]="emailForm">
+     <mat-form-field class="form__field">
+       <input matInput placeholder="Ваше имя" formControlName="name">
+     </mat-form-field>
+     <mat-form-field class="form__field">
+       <input matInput placeholder="Email" formControlName="email">
+     </mat-form-field>
+     <mat-form-field class="form__field">
+       <textarea matInput placeholder="Сообщение" formControlName="message"></textarea>
+     </mat-form-field>
+   </div>-->
 </div>
