--- a/src/app/components/footer/footer.component.less
+++ b/src/app/components/footer/footer.component.less
@@ -4,5 +4,34 @@
   bottom: 0;
   width: 100%;
   height: 80px;
-  background-color: #656366;
+  background-color: #cbcbcb;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .social-links {
+    display: flex;
+
+    &__facebook {
+      background: url(/assets/images/facebook.svg) 0 0 no-repeat;
+      height: 40px;
+      width: 40px;
+      margin-left: 24px;
+    }
+
+    &__instagram {
+      background: url(/assets/images/inst.svg) 0 0 no-repeat;
+      height: 40px;
+      width: 40px;
+      margin-left: 24px;
+    }
+
+    &__youtube {
+      background: url(/assets/images/youtube.svg) 0 0 no-repeat;
+      height: 40px;
+      width: 40px;
+      background-size: contain;
+      margin-left: 24px;
+    }
+  }
 }
