--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,32 @@
 <header class="header">
   <div class="header__container">
+    <div style="display: flex;align-items: center;">
+      <div routerLink="/" class="header__logo">
+
+      </div>
+      <div class="header__pages">
+        <div class="links" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+          <span>Главная</span>
+        </div>
+        <div class="links" routerLink="/service" routerLinkActive="active"
+             [routerLinkActiveOptions]="{exact:true}">
+          <span>Услуги</span>
+        </div>
+        <div class="links" routerLink="/about-us" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+          <span>О нас</span>
+        </div>
+      </div>
+    </div>
+    <div class="header__contact-info">
+      <button mat-raised-button color="accent">Задать вопрос</button>
+      <div class="social-links">
+        <div class="social-links__facebook"></div>
+        <div class="social-links__instagram"></div>
+        <div class="social-links__youtube"></div>
+      </div>
+    </div>
+  </div>
+  <!--<div class="header__container">
     <div class="header__title" routerLink="/">
       Чистим911
     </div>
@@ -9,5 +36,5 @@
     <div class="header__whatsapp">
       <a href="https://api.whatsapp.com/send?phone=375296566401">Написать в WhatsApp</a>
     </div>
-  </div>
+  </div>-->
 </header>
