--- a/src/app/components/main-page/main-page.component.less
+++ b/src/app/components/main-page/main-page.component.less
@@ -3,11 +3,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 1280px;
-    margin: 24px auto;
   }
 
   .our-services, .advantages, .feedback {
+    background-color: #f4fdff;
     &__title {
       font-size: 24px;
       font-family: sans-serif;
@@ -19,11 +18,13 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
+      max-width: 1280px;
+      width: 100%;
     }
   }
 
   .our-services {
-    &__container {
+    &__items {
       width: 100%;
       .rounded {
         counter-reset: li;
@@ -46,12 +47,12 @@
         &__link {
           position: relative;
           display: block;
-          padding: .4em .4em .4em 2em;
+          padding: 0.4em 0.4em 0.4em 2.5em;
           margin: .5em 0;
           background: #DAD2CA;
           color: #444;
           text-decoration: none;
-          border-radius: .3em;
+          border-radius: 20px;
           transition: .3s ease-out;
           font-size: 18px;
 
@@ -67,7 +68,7 @@
             content: counter(li);
             counter-increment: li;
             position: absolute;
-            left: -1.3em;
+            left: 0;
             top: 50%;
             margin-top: -1em;
             background: #8FD4C1;
@@ -89,8 +90,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 1280px;
-    margin: 24px auto;
     font-family: Ebrima;
   }
 
@@ -142,22 +141,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 1280px;
-    margin: 24px auto;
 
     &__body {
       font-family: Ebrima;
     }
   }
-
-  /*.form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-
-    &__field {
-      width: 600px;
-    }
-  }*/
 }
