--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,6 +1,9 @@
 .wrapper {
   position: relative;
   min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 
   .content {
     padding-bottom: 80px;
