--- a/src/app/components/footer/footer.component.less
+++ b/src/app/components/footer/footer.component.less
@@ -1,13 +1,9 @@
 .footer {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 80px;
   background-color: #cbcbcb;
   display: flex;
   justify-content: center;
   align-items: center;
+  justify-self: flex-end;
 
   .social-links {
     display: flex;
