change color, icon, info about person

--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -4,21 +4,29 @@
 
     </div>
     <div class="about-us__info">
-      <div class="name">
-        Константин Андреевич Хадкевич
+      <!--<div class="name">
+        ИП:
+        Ходневич Константин Андреевич
       </div>
       <div class="phone">
-        Телефон: <a class="phone__link" href="tel: +375296180164">+375296180164</a>
+        Телефон: <a class="phone__link" href="tel: +375296030773">+375296030773</a>
       </div>
       <div class="email">
-        Email: <a href="mailto:stasikostrich98@gmail.com">stasikostrich98@gmail.com</a>
+        Email: <a href="mailto:chistim911@gmail.com">chistim911@gmail.com</a>
       </div>
       <div class="IP">
-        ИП: Хадкевич К. А.
+
       </div>
       <div class="UNP">
-        УНП: 45745747
-      </div>
+        УНП: 190953454
+      </div>-->
+      Индивидуальный Предприниматель
+      Ходневич Константин Андреевич
+      г.Минск, ул. М.Богдановича, 118 п60
+      ОАО «Приорбанк» ЦБУ №111код 749
+      р\с BY35PJCB30130118411000000933
+      БИК PJCBBY2X;   УНП 190953454
+      220020 г.Минск , пр.Машерова ,40
     </div>
   </div>
 </div>
