--- a/src/app/components/catalog/catalog.component.html
+++ b/src/app/components/catalog/catalog.component.html
@@ -1,1 +1,18 @@
-<p>catalog works!</p>
+<div class="catalog">
+  <div class="catalog__container">
+    <div class="catalog__items">
+      <div class="item first">
+      </div>
+      <div class="item second">
+      </div>
+      <div class="item third">
+      </div>
+    </div>
+
+    <div class="catalog__item-info">
+      <div class="item-info"></div>
+      <div class="item-info"></div>
+      <div class="item-info"></div>
+    </div>
+  </div>
+</div>
