--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,9 @@
 <footer class="footer">
   <div class="social-links">
-    <div class="social-links__facebook"></div>
-    <div class="social-links__instagram"></div>
-    <div class="social-links__youtube"></div>
+    <div class="social-links__facebook" (click)="goToSocialNetwork('facebook')"></div>
+    <div class="social-links__vk" (click)="goToSocialNetwork('vk')"></div>
+    <div class="social-links__telegram" (click)="goToSocialNetwork('telegram')"></div>
+    <div class="social-links__instagram" (click)="goToSocialNetwork('instagram')"></div>
+    <div class="social-links__youtube" (click)="goToSocialNetwork('youtube')"></div>
   </div>
 </footer>
