--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -6,15 +6,8 @@
   justify-content: space-between;
 
   .content {
-    padding-bottom: 80px;
-
-    .navigation {
-      background: linear-gradient(to right, rgba(249, 116, 93, 1) 0%, rgba(249, 116, 93, 1) 6%, rgba(248, 91, 68, 1) 26%, rgba(248, 76, 53, 1) 38%, rgba(243, 84, 63, 1) 46%, rgba(245, 152, 138, 1) 80%);
-      display: flex;
-      margin: 0 auto;
-      padding: 24px 0;
-      justify-content: center;
-    }
+    background: rgb(219,223,225);
+    background: linear-gradient(0deg, rgba(219,223,225,1) 17%, rgba(203,207,209,1) 38%, rgba(190,193,195,1) 50%, rgba(142,144,146,1) 71%, rgba(86,87,88,1) 100%);
 
     .links {
       padding: 0 20px;
