--- a/src/app/components/about-us/about-us.component.less
+++ b/src/app/components/about-us/about-us.component.less
@@ -4,13 +4,15 @@
     align-items: center;
 
     .yandex-map {
+      padding: 24px 0;
+      height: calc(100vh - 189px);
       width: 50%;
-      height: calc(100vh - 245px);
     }
   }
 
   &__info {
-    padding-left: 72px;
+    width: 40%;
+    margin: 0 auto;
     .name, .phone, .email, .IP, .UNP {
       font-size: 22px;
       padding: 6px 0;
