--- a/src/app/components/header/header.component.less
+++ b/src/app/components/header/header.component.less
@@ -1,12 +1,13 @@
 .header {
-  background-color: #cbcbcb;
+  padding-top: 32px;
+  background: #565758;
 
   &__container {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 0 auto;
     max-width: 1280px;
+    margin: 0 auto;
   }
 
   &__logo {
@@ -25,7 +26,7 @@
     display: flex;
 
     .links {
-      color: black;
+      color: #FF9E41;
       padding: 0 24px;
 
       &:focus {
@@ -33,14 +34,25 @@
       }
 
       &:hover {
-        background-color: #CBCACA;
+        border-bottom: 5px solid #CBCACA;
         cursor: pointer;
       }
     }
 
     .active {
       border-bottom: 5px solid #FF9E41;
+
+      &:hover {
+        border-bottom: 5px solid #FF9E41;
+      }
     }
+  }
+
+  .social-icon {
+    height: 40px;
+    width: 40px;
+    margin-left: 24px;
+    background-size: contain;
   }
 
   &__contact-info {
@@ -48,27 +60,47 @@
 
     .social-links {
       display: flex;
+      cursor: pointer;
 
       &__facebook {
         background: url(/assets/images/facebook.svg) 0 0 no-repeat;
-        height: 40px;
-        width: 40px;
-        margin-left: 24px;
+        .social-icon();
       }
 
       &__instagram {
-        background: url(/assets/images/inst.svg) 0 0 no-repeat;
-        height: 40px;
-        width: 40px;
-        margin-left: 24px;
+        background: url(/assets/images/instagram.svg) 0 0 no-repeat;
+        .social-icon();
       }
 
       &__youtube {
         background: url(/assets/images/youtube.svg) 0 0 no-repeat;
-        height: 40px;
-        width: 40px;
-        background-size: contain;
-        margin-left: 24px;
+        .social-icon();
+      }
+
+      &__telegram {
+        background: url(/assets/images/telegram.svg) 0 0 no-repeat;
+        .social-icon();
+      }
+
+      &__vk {
+        background: url(/assets/images/vk.svg) 0 0 no-repeat;
+        .social-icon();
+      }
+    }
+  }
+
+  &__phone {
+    display: flex;
+    .phone {
+      &__icon {
+        background: url(/assets/images/phone.svg) 0 0 no-repeat;
+        .social-icon();
+      }
+
+      &__number {
+        padding-left: 12px;
+        font-size: 26px;
+        color:  #FF9E41;
       }
     }
   }
