--- a/src/app/components/main-page/main-page.component.less
+++ b/src/app/components/main-page/main-page.component.less
@@ -1,4 +1,14 @@
 .main {
+
+  &__container {
+    margin: 48px auto;
+    box-shadow: 0 0 29px 5px rgba(0, 0, 0, 0.3);
+    border-radius: 20px;
+    max-width: 1280px;
+    padding: 24px;
+    background-color: #dfe1e6;
+  }
+
   &__our-services {
     display: flex;
     flex-direction: column;
@@ -6,19 +16,21 @@
   }
 
   .our-services, .advantages, .feedback {
-    background-color: #f4fdff;
+    background-color: #dfe1e6;
+
     &__title {
       font-size: 24px;
       font-family: sans-serif;
       font-weight: bold;
       padding-bottom: 12px;
+      width: 100%;
+      text-align: center;
     }
 
     &__container {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      max-width: 1280px;
       width: 100%;
     }
   }
@@ -26,6 +38,7 @@
   .our-services {
     &__items {
       width: 100%;
+
       .rounded {
         counter-reset: li;
         list-style: none;
@@ -49,10 +62,10 @@
           display: block;
           padding: 0.4em 0.4em 0.4em 2.5em;
           margin: .5em 0;
-          background: #DAD2CA;
+          background: #FF9E41;
           color: #444;
           text-decoration: none;
-          border-radius: 20px;
+          border-radius: 22px;
           transition: .3s ease-out;
           font-size: 18px;
 
@@ -68,7 +81,7 @@
             content: counter(li);
             counter-increment: li;
             position: absolute;
-            left: 0;
+            left: -1px;
             top: 50%;
             margin-top: -1em;
             background: #8FD4C1;
@@ -95,7 +108,7 @@
 
   .advantages {
     &__list {
-      width: 100%;
+      width: 50%;
       display: flex;
       flex-wrap: wrap;
 
@@ -121,7 +134,7 @@
         }
 
         &__container {
-
+          padding-left: 20px;
         }
       }
 
@@ -133,6 +146,10 @@
           width: 80px;
           height: 80px;
         }
+
+        &__container {
+          padding-left: 20px;
+        }
       }
     }
   }
@@ -141,6 +158,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    &__container {
+      &:focus, ngb-carousel.carousel.slide:focus {
+        outline: none;
+      }
+    }
 
     &__body {
       font-family: Ebrima;
